--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,6 @@
             "--ssh=default"        
         ]
     },
-    "remoteUser": "ros",
     "runArgs": [
         "--cap-add=SYS_PTRACE",
         "--security-opt=seccomp=unconfined",
@@ -17,7 +16,7 @@
         "--network=host", # use the host network interfaces in the container
         "--volume=/tmp/.X11-unix:/tmp/.X11-unix", # for graphics forwarding
         "--volume=/dev:/dev", # for accessing devices
-        "--gpus all",
+        "--gpus=all",
         "--privileged",
     ],
     "containerEnv": {
@@ -25,7 +24,7 @@
         "DISPLAY": "${localEnv:DISPLAY}",
         "QT_X11_NO_MITSHM": "1",
         "NVIDIA_DRIVER_CAPABILITIES": "all",
-        }
-            
+        },
+    "postCreateCommand": "chmod +x ${containerWorkspaceFolder}/src/thesis/setup.sh && bash ${containerWorkspaceFolder}/src/thesis/setup.sh"            
 
 }
